--- a/HTML-연습/6.html
+++ b/HTML-연습/6.html
@@ -118,6 +118,7 @@
 
   </ul>
 -->
+<!--
 <div class="container">
 <h1>상품 주문서</h1>
   <form>
@@ -172,9 +173,64 @@
       <input type="reset" value="다시 작성">
     </form>
 </div>
+-->
+<!--
+<h1>예약 정보</h1>
+<form>
+  <ul>
+    <li>
+      <label for="r-name">이름</label>
+      <input type="text" id="re-name">
+    </li>
+    <li>
+      <label for="re-phone">휴대폰</label>
+      <input type="tel" id="re-phone">
+    </li>
+    <li>
+      <label for="r-email">이메일<label>
+      <input type="email" id="r-email">
+    </li>
+    <li>
+      <input type="submit" value="예약하기">
+    </li>
+  </ul>
+</form>
+-->
+<h1>프런트엔드 개발자 지원서</h1>
+HTML, CSS, Javascript에 대한 기술력 이해와 경험이 있는 분을 찾습니다.
 
 
-
+<form>
+  <h4>개인정보</h4>
+  <ul>
+    <li>
+      <label for="name">이름</label>
+      <input type="text" id="name" autofocus placeholder="공백없이 입력하세요">
+    </li>
+    <li>
+      <label for="tel">연락처<label>
+      <input type="tel" id="tel">
+    </li>
+  </ul>
+  <h4>지원분야</h4>
+    <ul>
+      <li>
+        <label><input type="radio" name="field" value="an">웹퍼블리싱</label>
+      </li>
+      <li>
+        <label><input type="radio" name="field" value="pd">웹 어플리케이션 개발</label>
+      </li>
+      <li>
+        <label><input type="radio" name="field" value="eng">개발 환경 개선</label>
+      </li>
+    </ul>
+  <h4>지원동기</h4>
+    <label><textarea name="지원동기" rows="5" cols="60" placeholder="본사 지원 동기를 간략히 써 주세요."></textarea></label>
+    <div>
+    <button type="submit">전송하기</button>
+    <input type="reset" value="다시 쓰기">
+    676</div>
+  </form>
 
 
   </body>
